[gd_scene load_steps=9 format=3 uid="uid://dhb1jrvfyhlhj"]

[ext_resource type="Script" path="res://scenes/game/level2/level_2.gd" id="1_dytrq"]
[ext_resource type="PackedScene" uid="uid://c7spg71oruxth" path="res://scenes/game/level2/level2_game_scene.tscn" id="2_5behc"]
[ext_resource type="PackedScene" uid="uid://5fm6trp7abm0" path="res://scenes/game/hud.tscn" id="3_4rya8"]
[ext_resource type="Script" path="res://scenes/game/ObjectAnimation.gd" id="4_qa70j"]
[ext_resource type="PackedScene" uid="uid://b6bskr75yfiom" path="res://graphics/level1/GameOver.tscn" id="38_gl45v"]
[ext_resource type="PackedScene" uid="uid://isaei0k0sfmp" path="res://graphics/level1/LevelCompleted.tscn" id="39_0u2bc"]
[ext_resource type="PackedScene" uid="uid://dy04hbfc738bq" path="res://graphics/level1/LevelFailed.tscn" id="40_y4oec"]
[ext_resource type="PackedScene" uid="uid://by4h363cgrfj2" path="res://graphics/level1/VictoryTriumph.tscn" id="41_vg6o8"]

[node name="Level2" type="Node2D"]
script = ExtResource("1_dytrq")

[node name="game_scene2" parent="." instance=ExtResource("2_5behc")]
show_behind_parent = true

[node name="HUD" parent="." instance=ExtResource("3_4rya8")]

[node name="ObjectAnimation" type="Node2D" parent="."]
position = Vector2(222, 0)
scale = Vector2(0.835, 1.03)
script = ExtResource("4_qa70j")

[node name="GameOver" parent="." instance=ExtResource("38_gl45v")]
visible = false

[node name="LevelCompleted" parent="." instance=ExtResource("39_0u2bc")]
visible = false

[node name="LevelFailed" parent="." instance=ExtResource("40_y4oec")]
visible = false

[node name="VictoryTriumph" parent="." instance=ExtResource("41_vg6o8")]
visible = false

[connection signal="ready" from="." to="game_scene2" method="_on_level_1_ready"]
[connection signal="ready" from="." to="HUD" method="_on_level_1_ready"]
[connection signal="object_found_signal" from="game_scene2" to="ObjectAnimation" method="_on_game_scene_object_found_signal"]
[connection signal="clue_pressed" from="HUD" to="ObjectAnimation" method="_on_hud_clue_pressed"]
